--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home active">
+        <section class="home">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -177,8 +177,29 @@
             </div>
           </div>
         </section>
-        <section class="analysis">
+        <section class="analysis active">
           <div class="analysis-container">
+            <header>
+              <div class="month-body">
+                <div class="left-arrow"></div>
+                <h3 class="month">Aug 17, 2024</h3>
+                <div class="right-arrow"></div>
+              </div>
+              <div class="balance-info">
+                <div class="expense-box">
+                  <p>EXPENSE</p>
+                  <p class="red stylish">₹0.00</p>
+                </div>
+                <div class="income-box">
+                  <p>INCOME</p>
+                  <p class="green stylish">₹2,999</p>
+                </div>
+                <div class="total-box">
+                  <p>TOTAL</p>
+                  <p class="green stylish">₹5899</p>
+                </div>
+              </div>
+            </header>
             <div class="chart">
               <canvas id="myChart"></canvas>
             </div>
