--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@
                 </div>
               </div>
             </header>
+            <div class="chart-options">
+              <div class="current-chart">
+                <p>INCOME OVERVIEW</p>
+              </div>
+            </div>
             <div class="chart">
+              
               <canvas id="myChart"></canvas>
             </div>
           </div>
