--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home">
+        <section class="home active">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -177,7 +177,7 @@
             </div>
           </div>
         </section>
-        <section class="analysis active">
+        <section class="analysis ">
           <div class="analysis-container">
             <header>
               <div class="month-body">
@@ -202,7 +202,14 @@
             </header>
             <div class="chart-options">
               <div class="current-chart">
-                <p>INCOME OVERVIEW</p>
+               <div class="opt-body">
+                <div class="arrow-down"></div>
+                <p class="semi-bold">INCOME OVERVIEW</p>
+               </div>
+                <div class="category-options">
+                  <p class="semi-bold">Income Overview</p>
+                  <p class="semi-bold">Expense Overview</p>
+                </div>
               </div>
             </div>
             <div class="chart">
