--- a/index.html
+++ b/index.html
@@ -43,141 +43,10 @@
                 </div>
               </div>
             </header>
-            <div class="main-content">
-              <div class="sub-content">
-                <div class="added-day-info semi-bold">Aug 17, Saturday</div>
-                <ul class="transaction-history">
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/salary.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Salary</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/atm-card_8983163.png" alt="" class="account-icon">
-                          <small class="account-name">Card</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount green">₹2999</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/health.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Health</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/wallet_3258446.png" alt="" class="account-icon">
-                          <small class="account-name">Wallet</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹5699</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/gift.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Grants</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/gpay.png" alt="" class="account-icon">
-                          <small class="account-name">Google Pay</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount green">₹5699</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/shopping.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Shopping</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/bank.png" alt="" class="account-icon">
-                          <small class="account-name">VICI Bank</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹5699</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="sub-content">
-                <div class="added-day-info semi-bold">Aug 16, Friday</div>
-                <ul class="transaction-history">
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/books.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Books</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/currency-notes_15326442.png" alt="" class="account-icon">
-                          <small class="account-name">Cash</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹199</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/phone.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Recharge</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/sbi.png" alt="" class="account-icon">
-                          <small class="account-name">SBI</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹399</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/paste.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Paste</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/dollar-bag_15326399.png" alt="" class="account-icon">
-                          <small class="account-name">Savings</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹20</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="transaction-info">
-                      <img src="./icons/Income-expense/petrol.jpg" alt="" class="transaction-icon">
-                      <div class="cat-account">
-                        <div class="category-name little-bold">Fuel</div>
-                        <div class="transaction-account-info">
-                          <img src="./Accounts/bank.png" alt="" class="account-icon">
-                          <small class="account-name">Canara Bank</small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="transaction-amount">
-                      <p class="amount red">₹200</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <div class="main-content"></div>
           </div>
         </section>
-        <section class="analysis ">
+        <section class="analysis">
           <div class="analysis-container">
             <header>
               <div class="month-body">
@@ -202,10 +71,10 @@
             </header>
             <div class="chart-options">
               <div class="current-chart">
-               <div class="opt-body">
-                <div class="arrow-down"></div>
-                <p class="semi-bold">INCOME OVERVIEW</p>
-               </div>
+                <div class="opt-body">
+                  <div class="arrow-down"></div>
+                  <p class="semi-bold">INCOME OVERVIEW</p>
+                </div>
                 <div class="category-options">
                   <p class="semi-bold">Income Overview</p>
                   <p class="semi-bold">Expense Overview</p>
@@ -213,9 +82,8 @@
               </div>
             </div>
             <div class="chart">
-              
               <canvas id="myChart"></canvas>
-          </div>
+            </div>
           </div>
         </section>
         <section class="budgets">
@@ -891,13 +759,12 @@
       </div>
     </div>
 
-    <script src="home.js"></script>
+    <script type="module" src="home.js"></script>
     <script async type="module" src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="analysis.js"></script>
     <script defer type="module" src="functions.js"></script>
     <script defer type="module" src="category.js"></script>
     <script defer type="module" src="budget.js"></script>
-    
   </body>
 </html>
