--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home active">
+        <section class="home">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -46,7 +46,7 @@
             <div class="main-content"></div>
           </div>
         </section>
-        <section class="analysis">
+        <section class="analysis active">
           <div class="analysis-container">
             <header>
               <div class="month-body">
@@ -83,6 +83,12 @@
             </div>
             <div class="chart">
               <canvas id="myChart"></canvas>
+            </div>
+
+            <div class="text-view">
+              <ul class="data-container">
+                
+              </ul>
             </div>
           </div>
         </section>
