--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home">
+        <section class="home active">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -46,7 +46,7 @@
             <div class="main-content"></div>
           </div>
         </section>
-        <section class="analysis active">
+        <section class="analysis">
           <div class="analysis-container">
             <header>
               <div class="month-body">
@@ -73,11 +73,11 @@
               <div class="current-chart">
                 <div class="opt-body">
                   <div class="arrow-down"></div>
-                  <p class="semi-bold">INCOME OVERVIEW</p>
+                  <p class="semi-bold current-view">INCOME OVERVIEW</p>
                 </div>
                 <div class="category-options">
-                  <p class="semi-bold">Income Overview</p>
-                  <p class="semi-bold">Expense Overview</p>
+                  <p class="semi-bold income-view">Income Overview</p>
+                  <p class="semi-bold expense-view">Expense Overview</p>
                 </div>
               </div>
             </div>
