--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home">
+        <section class="home active">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -44,9 +44,46 @@
               </div>
             </header>
             <div class="main-content"></div>
+            <div class="detail-view-container">
+              <div class="card-top">
+                <div class="card-header">
+                  <img src="./icons/close.svg" alt="" />
+                  <div class="card-operations">
+                    <img class="svg" src="./icons/delete.svg" alt="" />
+                    <img class="svg" src="./icons/edit.svg" alt="" />
+                  </div>
+                </div>
+                <div class="center-content">
+                  <p class="category-name-detail">INCOME</p>
+                  <p class="respective-amount">₹9,499.00</p>
+                </div>
+                <small class="date-time-details">Aug 18,2024 8:26 PM</small>
+              </div>
+              <div class="card-bottom">
+                <ul>
+                  <li>
+                    <p>Account</p>
+                    <div class="detail-box">
+                      <img src="./Accounts/wallet_3258446.png" alt="">
+                      <p>Savings</p>
+                    </div>
+                  </li>
+                  <li>
+                    <p>Category</p>
+                    <div class="detail-box">
+                      <img src="./icons/Income-expense/refunds.jpg" alt="">
+                      <p>Refunds</p>
+                    </div>
+                  </li>
+                </ul>
+                <div class="notes">
+                  <p>No notes</p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
-        <section class="analysis active">
+        <section class="analysis">
           <div class="analysis-container">
             <header>
               <div class="month-body">
@@ -86,9 +123,7 @@
             </div>
 
             <div class="text-view">
-              <ul class="data-container">
-                
-              </ul>
+              <ul class="data-container"></ul>
             </div>
           </div>
         </section>
