--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </li>
                 </ul>
                 <div class="notes">
-                  <p>No notes</p>
+                  <p>Dolorum similique provident veniam excepturi quaerat, eius laboriosam nulla? Obcaecati nemo neque commodi vel ipsum totam labore natus architecto!</p>
                 </div>
               </div>
             </div>
