--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </div>
                   <div class="center-content">
                     <p class="category-name-detail" style="text-transform: uppercase;">INCOME</p>
-                    <p class="respective-amount">₹9,499.00</p>
+                    <p class="respective-amount"></p>
                   </div>
                   <small class="date-time-details">Aug 18,2024 8:26 PM</small>
                 </div>
@@ -66,14 +66,14 @@
                       <p class="accname">Account</p>
                       <div class="detail-box">
                         <img class="accountImg" src="./Accounts/wallet_3258446.png" alt="">
-                        <p>Savings</p>
+                        <p class="a-info"></p>
                       </div>
                     </li>
                     <li>
                       <p class="catename">Category</p>
                       <div class="detail-box">
                         <img class="categoryImg" src="./icons/Income-expense/refunds.jpg" alt="">
-                        <p>Refunds</p>
+                        <p class="c-info"></p>
                       </div>
                     </li>
                   </ul>
