--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 </div>
               </div>
             </div>
+            <div class="add-item">
+              <div class="plus">
+               
+              </div>
+            </div>
           </div>
         </section>
         <section class="analysis">
