--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
                     </div>
                   </div>
                   <div class="center-content">
-                    <p class="category-name-detail" style="text-transform: uppercase;">INCOME</p>
+                    <p
+                      class="category-name-detail"
+                      style="text-transform: uppercase"
+                    >
+                      INCOME
+                    </p>
                     <p class="respective-amount"></p>
                   </div>
                   <small class="date-time-details">Aug 18,2024 8:26 PM</small>
@@ -65,14 +70,22 @@
                     <li>
                       <p class="accname">Account</p>
                       <div class="detail-box">
-                        <img class="accountImg" src="./Accounts/wallet_3258446.png" alt="">
+                        <img
+                          class="accountImg"
+                          src="./Accounts/wallet_3258446.png"
+                          alt=""
+                        />
                         <p class="a-info"></p>
                       </div>
                     </li>
                     <li>
                       <p class="catename">Category</p>
                       <div class="detail-box">
-                        <img class="categoryImg" src="./icons/Income-expense/refunds.jpg" alt="">
+                        <img
+                          class="categoryImg"
+                          src="./icons/Income-expense/refunds.jpg"
+                          alt=""
+                        />
                         <p class="c-info"></p>
                       </div>
                     </li>
@@ -83,9 +96,52 @@
                 </div>
               </div>
             </div>
-            <div class="add-item">
-              <div class="plus">
-               
+            <div class="add-item active">
+              <div class="plus"></div>
+              <div class="input-container">
+                <div class="head">
+                  <div class="li">
+                    <img style="filter: invert(1);" src="./icons/close.svg" alt="">
+                    <p class="semi-bold input-box-close">CANCEL</p>
+                  </div>
+                  <div class="li">
+                    <img class="svg" src="icons/tick.svg" alt="">
+                    <p class="semi-bold">SAVE</p>
+                  </div>
+                </div>
+                <div class="sub-head-one">
+                  <div class="income-body">
+                    <img class="svg" src="icons/designtick.svg" alt="">
+                    <p class="semi-bold">INCOME</p>
+                  </div>
+                  <div class="expense-body">
+                    <img class="svg" src="" alt="">
+                    <p class="semi-bold">EXPENSE</p>
+                  </div>
+                  <div class="transfer-body">
+                    <img class="svg" src="" alt="">
+                    <p class="semi-bold">TRANSFER</p>
+                  </div>
+                </div>
+                <div class="sub-head-two">
+                  <div class="account-body">
+                    <p class="change-font-style">Account</p>
+                    <div class="child-body">
+                      <p class="semi-bold">Account</p>
+                      <img src="icons/account.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="category-body">
+                    <p class="change-font-style">Category</p>
+                    <div class="child-body">
+                      <p class="semi-bold">Account</p>
+                      <img src="icons/category.svg" alt="">
+                    </div>
+                  </div>
+                </div>
+                <div class="notes-box">
+                  <textarea name="" id="" placeholder="Add notes"></textarea>
+                </div>
               </div>
             </div>
           </div>
@@ -728,7 +784,7 @@
       <footer>
         <nav>
           <ul>
-            <li >
+            <li>
               <img class="svg" src="icons/home.svg" alt="" />
               <small>Records</small>
             </li>
