--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="add-item active">
+            <div class="add-item">
               <div class="plus"></div>
               <div class="input-container">
                 <div class="head">
