--- a/index.html
+++ b/index.html
@@ -101,25 +101,29 @@
               <div class="input-container">
                 <div class="head">
                   <div class="li">
-                    <img style="filter: invert(1);" src="./icons/close.svg" alt="">
+                    <img
+                      style="filter: invert(1)"
+                      src="./icons/close.svg"
+                      alt=""
+                    />
                     <p class="semi-bold input-box-close">CANCEL</p>
                   </div>
                   <div class="li">
-                    <img class="svg" src="icons/tick.svg" alt="">
+                    <img class="svg" src="icons/tick.svg" alt="" />
                     <p class="semi-bold">SAVE</p>
                   </div>
                 </div>
                 <div class="sub-head-one">
                   <div class="income-body">
-                    <img class="svg" src="icons/designtick.svg" alt="">
+                    <img class="svg" src="icons/designtick.svg" alt="" />
                     <p class="semi-bold">INCOME</p>
                   </div>
                   <div class="expense-body">
-                    <img class="svg" src="" alt="">
+                    <img class="svg" src="" alt="" />
                     <p class="semi-bold">EXPENSE</p>
                   </div>
                   <div class="transfer-body">
-                    <img class="svg" src="" alt="">
+                    <img class="svg" src="" alt="" />
                     <p class="semi-bold">TRANSFER</p>
                   </div>
                 </div>
@@ -128,27 +132,28 @@
                     <p class="change-font-style">Account</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img src="icons/account.svg" alt="">
+                      <img src="icons/account.svg" alt="" />
                     </div>
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img src="icons/category.svg" alt="">
+                      <img src="icons/category.svg" alt="" />
                     </div>
                   </div>
                 </div>
                 <div class="notes-box">
                   <textarea name="" id="" placeholder="Add notes"></textarea>
                 </div>
+                <div class="main-input-box">
+                  <div class="calc-display">
+                    <div class="calc-values"></div>
+                    <div class="calc-answer"></div>
+                  </div>
+                </div>
                 <div class="calculator">
                   <div class="calc-body">
-                    <div class="display">
-                      <div class="values"></div>
-                      <div class="answer"></div>
-                    </div>
-            
                     <div class="sub-division">
                       <button value="*" class="btns multiply">x</button>
                       <button value="7" class="btns">7</button>
