--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="add-item">
               <div class="plus"></div>
-              <div class="input-container">
+              <div class="input-containers">
                 <div class="head">
                   <div class="li">
                     <img
