--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
                 </div>
               </div>
             </div>
-            <div class="add-item">
+            <div class="add-item close">
               <div class="plus"></div>
-              <div class="input-containers">
+              
+            </div>
+            <div class="input-containers">
+              <div class="top-portion">
                 <div class="head">
                   <div class="li">
                     <img
@@ -146,38 +149,38 @@
                 <div class="notes-box">
                   <textarea name="" id="" placeholder="Add notes"></textarea>
                 </div>
-                <div class="main-input-box">
-                  <div class="calc-display">
-                    <div class="calc-values"></div>
-                    <div class="calc-answer"></div>
-                  </div>
+              </div>
+              <div class="main-input-box">
+                <div class="calc-display">
+                  <div class="calc-values"></div>
+                  <div class="calc-answer"></div>
                 </div>
-                <div class="calculator">
-                  <div class="calc-body">
-                    <div class="sub-division">
-                      <button value="*" class="btns multiply">x</button>
-                      <button value="7" class="btns">7</button>
-                      <button value="8" class="btns">8</button>
-                      <button value="9" class="btns">9</button>
-                    </div>
-                    <div class="sub-division">
-                      <button value="-" class="btns sub">-</button>
-                      <button value="4" class="btns">4</button>
-                      <button value="5" class="btns">5</button>
-                      <button value="6" class="btns">6</button>
-                    </div>
-                    <div class="sub-division">
-                      <button value="+" class="btns add">+</button>
-                      <button value="1" class="btns">1</button>
-                      <button value="2" class="btns">2</button>
-                      <button value="3" class="btns">3</button>
-                    </div>
-                    <div class="sub-division">
-                      <button value="/" class="btns division">÷</button>
-                      <button value="0" class="btns">0</button>
-                      <button value="." class="btns dot">.</button>
-                      <button value="=" class="equal btns">=</button>
-                    </div>
+              </div>
+              <div class="calculator">
+                <div class="calc-body">
+                  <div class="sub-division">
+                    <button value="*" class="btns multiply">x</button>
+                    <button value="7" class="btns">7</button>
+                    <button value="8" class="btns">8</button>
+                    <button value="9" class="btns">9</button>
+                  </div>
+                  <div class="sub-division">
+                    <button value="-" class="btns sub">-</button>
+                    <button value="4" class="btns">4</button>
+                    <button value="5" class="btns">5</button>
+                    <button value="6" class="btns">6</button>
+                  </div>
+                  <div class="sub-division">
+                    <button value="+" class="btns add">+</button>
+                    <button value="1" class="btns">1</button>
+                    <button value="2" class="btns">2</button>
+                    <button value="3" class="btns">3</button>
+                  </div>
+                  <div class="sub-division">
+                    <button value="/" class="btns division">÷</button>
+                    <button value="0" class="btns">0</button>
+                    <button value="." class="btns dot">.</button>
+                    <button value="=" class="equal btns">=</button>
                   </div>
                 </div>
               </div>
