--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="head">
                   <div class="li">
                     <img
-                      style="filter: invert(1)"
+                     class="svg"
                       src="./icons/close.svg"
                       alt=""
                     />
