--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
                     <p class="change-font-style">Account</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img src="icons/account.svg" alt="" />
+                      <img class="svg" src="icons/account.svg" alt="" />
                     </div>
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img src="icons/category.svg" alt="" />
+                      <img class="svg" src="icons/category.svg" alt="" />
                     </div>
                   </div>
                 </div>
