--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                     <p class="semi-bold input-box-close">CANCEL</p>
                   </div>
                   <div class="li">
-                    <img class="svg" src="icons/tick.svg" alt="" />
+                    <img  class="svg" src="icons/tick.svg" alt="" />
                     <p class="semi-bold">SAVE</p>
                   </div>
                 </div>
                 <div class="sub-head-one">
                   <div class="income-body">
-                    <img class="svg" src="icons/designtick.svg" alt="" />
+                    <img style="filter: invert(1);" class="svg" src="icons/designtick.svg" alt="" />
                     <p class="semi-bold">INCOME</p>
                   </div>
                   <div class="expense-body">
@@ -135,14 +135,14 @@
                     <p class="change-font-style">Account</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img class="svg" src="icons/account.svg" alt="" />
+                      <img style="filter: invert(1);" class="svg" src="icons/account.svg" alt="" />
                     </div>
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img class="svg" src="icons/category.svg" alt="" />
+                      <img style="filter: invert(1);" class="svg" src="icons/category.svg" alt="" />
                     </div>
                   </div>
                 </div>
