--- a/index.html
+++ b/index.html
@@ -96,29 +96,29 @@
                 </div>
               </div>
             </div>
-            <div class="add-item close">
+            <div class="add-item active">
               <div class="plus"></div>
-              
             </div>
             <div class="input-containers">
               <div class="top-portion">
                 <div class="head">
                   <div class="li">
-                    <img
-                     class="svg"
-                      src="./icons/close.svg"
-                      alt=""
-                    />
+                    <img class="svg" src="./icons/close.svg" alt="" />
                     <p class="semi-bold input-box-close">CANCEL</p>
                   </div>
                   <div class="li">
-                    <img  class="svg" src="icons/tick.svg" alt="" />
+                    <img class="svg" src="icons/tick.svg" alt="" />
                     <p class="semi-bold">SAVE</p>
                   </div>
                 </div>
                 <div class="sub-head-one">
                   <div class="income-body">
-                    <img style="filter: invert(1);" class="svg" src="icons/designtick.svg" alt="" />
+                    <img
+                      style="filter: invert(1)"
+                      class="svg"
+                      src="icons/designtick.svg"
+                      alt=""
+                    />
                     <p class="semi-bold">INCOME</p>
                   </div>
                   <div class="expense-body">
@@ -135,14 +135,24 @@
                     <p class="change-font-style">Account</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img style="filter: invert(1);" class="svg" src="icons/account.svg" alt="" />
+                      <img
+                        style="filter: invert(1)"
+                        class="svg"
+                        src="icons/account.svg"
+                        alt=""
+                      />
                     </div>
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body">
                       <p class="semi-bold">Account</p>
-                      <img style="filter: invert(1);" class="svg" src="icons/category.svg" alt="" />
+                      <img
+                        style="filter: invert(1)"
+                        class="svg"
+                        src="icons/category.svg"
+                        alt=""
+                      />
                     </div>
                   </div>
                 </div>
@@ -178,11 +188,23 @@
                   </div>
                   <div class="sub-division">
                     <button value="/" class="btns division">÷</button>
+                    <button value="c" class="btns clear">C</button>
                     <button value="0" class="btns">0</button>
-                    <button value="." class="btns dot">.</button>
                     <button value="=" class="equal btns">=</button>
                   </div>
                 </div>
+              </div>
+              <div class="account-options-body">
+                <h2>Select an account</h2>
+                <ul class="parent-box">
+                  <li>
+                    <div class="left-part">
+                      <img src="./Accounts/dollar-bag_15326399.png" alt="" />
+                      <p class="semi-bold">Savings</p>
+                    </div>
+                    <p class="semi-bold red">₹23,999</p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -338,17 +360,18 @@
               <h3>Overall</h3>
               <div class="penny-info">
                 <div class="top">
-                  <div class="expense">
+                  <div class="expense expense-box">
                     <p>EXPENSE SO FAR</p>
-                    <b class="red stylish">-₹5,000</b>
+                    <p class="red stylish"></p>
                   </div>
-                  <div class="income">
+                  <div class="income income-box">
                     <p>INCOME SO FAR</p>
-                    <b class="green stylish">₹20,302</b>
+                    <p class="green stylish"></p>
                   </div>
                 </div>
-                <div class="bottom">
-                  <p>All accounts balance: <b class="bold">₹23,323</b></p>
+                <div class="bottom total-box">
+                  <p>All accounts balance:</p>
+                  <p class="bold">₹23,323</p>
                 </div>
               </div>
             </header>
