--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body">
-                      <p class="semi-bold">Account</p>
+                      <p class="semi-bold">Category</p>
                       <img
                         style="filter: invert(1)"
                         class="svg"
@@ -203,6 +203,15 @@
                       <p class="semi-bold">Savings</p>
                     </div>
                     <p class="semi-bold red">₹23,999</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="category-options-body">
+                <h2>Select Category</h2>
+                <ul class="parent-box">
+                  <li>
+                    <img src="./icons/Income-expense/watch.jpg" alt="" />
+                    <small>Watch</small>
                   </li>
                 </ul>
               </div>
